# insight

./: .gitignore  Dockerfile.aarch64  Dockerfile.x86_64  README.md  build_docker.sh  cyclonedds_jetson.xml  cyclonedds_laptop.xml  docker_env_setup.sh  run_docker.sh  setup.sh  setup_isaac_ros_vslam.sh
arduino/: motor_controller.ino
platformio/include/: BTS7960MotorController.h  Drivetrain.h  OnOffMotorController.h  RobotMap.h  WheelPod.h
platformio/src/: BTS7960MotorController.cpp  Drivetrain.cpp  OnOffMotorController.cpp  WheelPod.cpp  main.cpp
robot/: serial_comm.py  teleop.py
ros_ws/src/robot_bringup/: package.xml  setup.py
ros_ws/src/robot_bringup/launch/: robot_bringup_launch.py  robot_vio_bringup_launch.py  visual_slam_realsense.launch.py
ros_ws/src/robot_control/: package.xml  setup.py
ros_ws/src/robot_control/launch/: robot_control_launch.py
ros_ws/src/robot_control/robot_control/: motor_driver_node.py  serial_comm.py
ros_ws/src/robot_description/: CMakeLists.txt  package.xml
ros_ws/src/robot_description/config/: robot.rviz
ros_ws/src/robot_description/launch/: rviz_launch.py  rviz_sim_launch.py
ros_ws/src/robot_description/urdf/: robot.urdf
ros_ws/src/robot_description/urdf/meshes/: chassis.dae
ros_ws/src/robot_teleop/: package.xml  setup.py
ros_ws/src/robot_teleop/launch/: robot_teleop_launch.py
ros_ws/src/robot_teleop/robot_teleop/: image_viewer.py  wasdqe_teleop.py
scripts/: deadband_correction.py  read_pots.py  serial_effort_waveform_sender.py  viz_urdf.py
urdf/: robot.urdf
urdf/meshes/: wheel.dae  wheelpod.dae
